--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,43 +1,70 @@
 annotated-types==0.7.0
 anyio==4.8.0
+CacheControl==0.14.3
 cachetools==5.5.2
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.0
 colorama==0.4.6
+cryptography==44.0.3
+distro==1.9.0
 dnspython==2.7.0
 email_validator==2.2.0
-fastapi==0.115.11
+fastapi==0.115.8
 fastapi-cli==0.0.7
-google-auth==2.38.0
-google-genai==1.3.0
-h11==0.14.0
-httpcore==1.0.7
+firebase-admin==6.8.0
+google-api-core==2.24.2
+google-api-python-client==2.169.0
+google-auth==2.40.1
+google-auth-httplib2==0.2.0
+google-cloud-core==2.4.3
+google-cloud-firestore==2.20.2
+google-cloud-storage==3.1.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+grpcio==1.71.0
+grpcio-status==1.71.0
+h11==0.16.0
+httpcore==1.0.9
+httplib2==0.22.0
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
-Jinja2==3.1.5
+Jinja2==3.1.6
+jiter==0.9.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+msgpack==1.1.0
+numpy==2.2.3
+openai==1.78.0
+proto-plus==1.26.1
+protobuf==5.29.4
 pyasn1==0.6.1
-pyasn1_modules==0.4.1
+pyasn1_modules==0.4.2
+pycparser==2.22
 pydantic==2.10.6
 pydantic_core==2.27.2
 Pygments==2.19.1
-python-dotenv==1.0.1
+PyJWT==2.10.1
+pyparsing==3.2.3
+python-dotenv==1.1.0
 python-multipart==0.0.20
 PyYAML==6.0.2
 requests==2.32.3
-rich==13.9.4
-rich-toolkit==0.13.2
-rsa==4.9
+rich==14.0.0
+rich-toolkit==0.14.5
+rsa==4.9.1
 shellingham==1.5.4
 sniffio==1.3.1
-starlette==0.46.0
-typer==0.15.2
+starlette==0.45.3
+tqdm==4.67.1
+typer==0.15.3
 typing_extensions==4.12.2
-urllib3==2.3.0
-uvicorn==0.34.0
-watchfiles==1.0.4
-websockets==14.2
+uritemplate==4.1.1
+urllib3==2.4.0
+uvicorn==0.34.2
+watchfiles==1.0.5
+websockets==15.0.1
